fix search term overflow

--- a/src/app/FancySearch.less
+++ b/src/app/FancySearch.less
@@ -11,4 +11,5 @@
     background-color: hsl(60,80%,93%);
     box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
     z-index: @header-z-index;
+    white-space: nowrap;
 }
